tests/miniJava/neg/000213_mutation.MiniJava
class java { public static int [] java ; void Main ( String [ ] java ) { { } } }
